=== master

* Add defaults_setter plugin :cache option for caching default values returned (jeremyevans)

* Freeze string values in hashes returned by Database#schema (jeremyevans)

=== 5.4.0 (2018-01-04)

* Enable fractional seconds in timestamps on DB2 (jeremyevans) (#1463)

* Don't attempt to insert a second time if insert_select runs a query that doesn't return results, which can happen when triggers are used (jeremyevans)

* Make Dataset#insert_select on PostgreSQL and MSSQL return false instead of nil if the INSERT query is sent to the database but returns no rows (jeremyevans)

* Add index_caching extension for caching calls to Database#indexes (kenaniah, jeremyevans) (#1461)

* Allow Database#indexes on SQLite, MSSQL, SQLAnywhere, and DB2 to handle SQL::Identifier values (jeremyevans)

* Add pg_timestamptz extension for using timestamptz (timestamp with time zone) as the default timestamp type (jeremyevans)

* Support Sequel.date_{add,sub} :cast option for setting cast type in date_arithmetic extension (jeremyevans)

* Optimize Database#synchronize implementation on ruby 2.5+ (jeremyevans)

* Add class_table_inheritance plugin :ignore_subclass_columns option (brianphillips) (#1459)

* Make Dataset#to_xml in xml_serializer work with eager_graphed datasets (jeremyevans)

* Make Dataset#to_json in json_serializer work with eager_graphed datasets (jeremyevans)

* Cache Dataset#nullify dataset in the null_dataset extension (chanks) (#1456)

* Add datetime_parse_to_time extension, for parsing timestamp strings without offsets using DateTime.parse.to_time (jeremyevans) (#1455)

* Add WHERE NULL filter for Dataset#where calls with no existing filter, no argument, and where the virtual row block returns nil (jeremyevans)

=== 5.3.0 (2017-12-01)

* Add logger to Database instance before making first connection in bin/sequel (jeremyevans)

* Drop support for PostgreSQL <8.1 in Database#indexes (jeremyevans)
