@@ -1,5 +1,7 @@
 === master
 
+* Make defaults_setter plugin prefer :callable_default db_schema values over :ruby_default db_schema values (jeremyevans)
+
 * Add defaults_setter plugin :cache option for caching default values returned (jeremyevans)
 
 * Freeze string values in hashes returned by Database#schema (jeremyevans)
